adicionando novos métodos